--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -16,4 +16,8 @@ $orange: #f6993f;
 $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
-$cyan: #6cb2eb;
+$cyan: rgba(16, 185, 129, 1);
+
+.bg-verde {
+    background-color: rgba(16, 185, 129, 1) !important;
+}
